<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<LinearLayout
    android:id="@+id/add_product_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/add_part_name"
        style="@style/add_part_style2"
        android:text="@string/add_part_name" />

    <EditText
        android:id="@+id/input_part_name"
        style="@style/add_part_style" />

    <TextView
        android:id="@+id/add_part_supplier"
        style="@style/add_part_style2"
        android:text="@string/add_part_supplier" />

    <EditText
        android:id="@+id/input_part_supplier"
        style="@style/add_part_style" />

    <TextView
        android:id="@+id/add_part_qty"
        style="@style/add_part_style2"
        android:text="@string/add_part_qty" />

    <EditText
        android:id="@+id/input_part_qty"
        style="@style/add_part_style" />

    <TextView
        android:id="@+id/add_part_cost"
        style="@style/add_part_style2"
        android:text="@string/add_part_cost" />

    <EditText
        android:id="@+id/input_part_cost"
        style="@style/add_part_style" />

    <TextView
        android:id="@+id/add_part_price"
        style="@style/add_part_style2"
        android:text="@string/add_part_price" />

    <EditText
        android:id="@+id/input_part_price"
        style="@style/add_part_style" />

    <Button
        android:id="@+id/input_image_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_part_image" />

    <ImageView
        android:id="@+id/part_image"
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_height" />

    <Button
        android:id="@+id/input_part_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_part_btn"
        android:layout_gravity="center"/>

</LinearLayout>
</ScrollView>