<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/details_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            style="@style/detail_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="@string/details_heading" />

        <TextView style="@style/horizontal_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/details_part"
                    style="@style/list_item_style"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/details_supplier"
                    style="@style/list_item_style2"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/details_quantity"
                    style="@style/list_item_style2"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <ImageView
                android:id="@+id/details_thumbnail"
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_height" />
        </LinearLayout>

        <TextView style="@style/horizontal_line"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/list_item_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/prefix_cost" />

            <TextView
                style="@style/list_item_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/prefix_price" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/details_purchaseprice"
                style="@style/detail_qty_style" />

            <TextView
                android:id="@+id/details_saleprice"
                style="@style/detail_qty_style" />
        </LinearLayout>

        <TextView style="@style/horizontal_line"/>

        <TextView
            style="@style/detail_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adjust_heading" />


        <TextView
            style="@style/add_part_style2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="@string/adjust_subheading" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
            android:id="@+id/adjust_1down_btn"
            android:layout_width="0dp"
            android:maxWidth="@dimen/btn_width"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:text="@string/adjust_1down_btn" />

        <Button
            android:id="@+id/adjust_1up_btn"
            android:layout_width="0dp"
            android:maxWidth="@dimen/btn_width"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:text="@string/adjust_1up_btn" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">

            <TextView
                style="@style/add_part_style2"
                android:layout_width="0dp"
                android:layout_weight=".3"
                android:layout_height="wrap_content"
                android:text="@string/adjust_quantity"/>

            <EditText
                android:id="@+id/adjust_quantity"
                style="@style/add_part_style2"
                android:layout_width="0dp"
                android:layout_weight=".2"
                android:layout_height="wrap_content"
                android:hint="@string/adjust_quantity_hint"
                android:textColorHint="@color/colorAccent"/>

            <Button
                android:id="@+id/adjust_quantity_btn"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/adjust_quantity_btn" />
        </LinearLayout>

        <TextView style="@style/horizontal_line"/>

        <Button
            android:id="@+id/purchase_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/purchase_btn" />

        <Button
            android:id="@+id/delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/delete_btn" />
    </LinearLayout>
</ScrollView>